fix spacing

--- a/src/client/components/button/Button.scss
+++ b/src/client/components/button/Button.scss
@@ -29,6 +29,7 @@
     &:has(.label > svg:only-child) {
         aspect-ratio: 1/1;
         padding: 0;
+        min-height: 30px;
     }
 
     /*Text Icon*/
