--- a/src/client/components/folder-container/FolderContainer.scss
+++ b/src/client/components/folder-container/FolderContainer.scss
@@ -17,7 +17,7 @@
         .folder {
             .folder-body {
                 .folder-style {
-                    gap: var(--space-s);
+                    gap: var(--space-xs);
                 }
             }
         }
